# RemoveMCHeaders

./: CMakeLists.txt  Makefile  README.md  main.cpp  rmch.pro
interface/: rmch_interface.cpp  rmch_interface.hpp
qt/: main_window.hpp  main_window.ui
